	
	Enhancements:
	----------------------------
	+ Added add nested subnet under subnet details to simplify master subnet selection in hierarchy;
	+ Added edit subnet link from search results;
	+ Added reverse IPv6 DNS entries to IPCalc (Vincent Boisard);
	+ Added option for plain-text emails;
	+ Added ckEditor to write instructions;
	+ StrictMode is not set globally anymore but set per section;

	Bugfixes:
	------------------------
	+ Fixed overlay on second popup;
	+ Fixed IE search bug;
	+ Fixed support for non-standard ports;
	+ Fixed permitting overlapping subnets if vrfs are different;
	+ Fixed dates in logging appearing in 12h format;
	+ Fixed broken subnets link in tools > subnets if installation is not at document root;
	+ Fixed error when adding new subnet if checkboxes are not selected in newer MySQL servers;
	+ Fixed bad display of multilined navigation bar;
	+ Fixed Wrong output of tools > VLAN list when using Duplicate VLANs;

== 0.7

	New features:
	----------------------------	
	+ Completely rewritten UI using twitter's bootstrap as base;
	+ Using mod_rewrite apache module to handle GET requests (new install requitements!);
	+ Unlimited number of subnetting levels;
	+ OpenLDAP authentication support;
	+ New URL structure;
	+ Sorting of IP addresses;
	+ Custom subnet fields;
	+ Custom VLAN fields and admin option to allow duplicate VLAN names (metro area VLANs);
	+ Script to automatically update IP <-> hostname, run via cron (functions/scripts/resolveIPaddresses.php);
	+ Show Subnet name instead of subnet IP address option;
	+ Strict mode option in config files that controlls overlapping checks;
	+ New subnet menu;
	+ Added printLimit feature to break IP addresses into pages;
	
	Enhancements:
	----------------------------
	+ Lots of UI changes;
	+ Less Ajax usage to display websites and details;
	+ Hierarchy display under subnet details (breadcrumbs);
	+ Search results covering VLANs;
	+ Custom IP fields ordering;