@@ -22,6 +22,11 @@ $myFieldsNumSubnets = getCustomSubnetsFieldsNumArr();
 $myFieldsVLAN = getCustomVLANFields();
 /* Custom VLAN fields by number */
 $myFieldsNumVLAN = getCustomVLANFieldsNumArr();
+
+/* get all custom User fields */
+$myFieldsUser = getCustomUserFields();
+/* Custom VLAN fields by number */
+$myFieldsNumUser = getCustomUserFieldsNumArr();
 ?>
 
 
@@ -79,7 +84,7 @@ $myFieldsNumVLAN = getCustomVLANFieldsNumArr();
 	<!-- add -->
 	<tr>
 		<td colspan="4">
-			<button class='btn btn-small' data-action='add'  data-fieldname='<?php print $field['name']; ?>' rel='tooltip' data-placement='right' title='Add new custom IP address field'><i class='icon-gray icon-plus'></i> Add new</button>
+			<button class='btn btn-small' data-action='add'  data-fieldname='<?php print $field['name']; ?>' rel='tooltip' data-placement='right' title='Add new custom IP address field'><i class='icon-gray icon-plus'></i>
 		</td>
 	</tr>	
 	<!-- result -->
@@ -146,7 +151,7 @@ $myFieldsNumVLAN = getCustomVLANFieldsNumArr();
 	<!-- add -->
 	<tr>
 		<td colspan="4">
-			<button class='btn btn-small' data-action='add'  data-fieldname='<?php print $field['name']; ?>' rel='tooltip' data-placement='right' title='Add new custom subnet field'><i class='icon-gray icon-plus'></i> Add new</button>
+			<button class='btn btn-small' data-action='add'  data-fieldname='<?php print $field['name']; ?>' rel='tooltip' data-placement='right' title='Add new custom subnet field'><i class='icon-gray icon-plus'></i>
 		</td>
 	</tr>
 
@@ -214,13 +219,78 @@ $myFieldsNumVLAN = getCustomVLANFieldsNumArr();
 	<!-- add -->
 	<tr>
 		<td colspan="4">
-			<button class='btn btn-small' data-action='add'  data-fieldname='<?php print $field['name']; ?>' rel='tooltip' data-placement='right' title='Add new custom VLAN field'><i class='icon-gray icon-plus'></i> Add new</button>
+			<button class='btn btn-small' data-action='add'  data-fieldname='<?php print $field['name']; ?>' rel='tooltip' data-placement='right' title='Add new custom VLAN field'><i class='icon-gray icon-plus'></i>
 		</td>
 	</tr>
 	<!-- result -->
 	<tr>
 		<td colspan="4">
 			<div class="customVLANResult"></div>
+		</td>
+	</tr>
+	</tbody>
+
+
+
+	<!-- Custom user fields -->
+	<tbody id="customUser">
+	<tr>
+		<th colspan="4">
+			<h4>Custom User fields</h4>
+		</th>
+	</tr>
+	<?php
+	/* no results */
+	if(sizeof($myFieldsUser) == 0) {
+		print '<tr>'. "\n";
+		print '<td colspan="4"><div class="alert alert-info alert-nomargin">No custom user fields created yet</div></td>'. "\n";
+		print '</tr>'. "\n";
+	}
+	/* already available */
+	else {
+		# get size
+		$size = sizeof($myFieldsUser);
+		$m = 0;
+
+		foreach($myFieldsUser as $field)
+		{
+			print '<tr>'. "\n";
+
+			# ordering
+			if (( ($m+1) != $size) ) 	{ print "<td><button class='btn btn-small down' data-direction='down' rel='tooltip' title='Move down' data-fieldname='$myFieldsNumUser[$m]' data-nextfieldname='".$myFieldsNumUser[$m+1]."'><i class='icon-gray icon-chevron-down'></i></button></td>";	}
+			else 						{ print '<td></td>'. "\n";}
+	
+			print '<td class="name">'. $field['name'] .'</td>'. "\n";
+
+			#actions
+			print "<td class='actions'>";
+			print "	<div class='btn-group'>";
+			print "		<button class='btn btn-small' data-action='edit'   data-fieldname='$field[name]'><i class='icon-gray icon-pencil'></i></button>";
+			print "		<button class='btn btn-small' data-action='delete' data-fieldname='$field[name]'><i class='icon-gray icon-remove'></i></button>";
+			print "	</div>";
+
+			# warning for older versions
+			if((is_numeric(substr($field['name'], 0, 1))) || (!preg_match('!^[\w_ ]*$!', $field['name'])) ) { print '<span class="alert alert-warning"><strong>Warning</strong>: Invalid field name!</span>'; }
+
+			print "</td>";
+
+			print '</tr>'. "\n";
+	
+			$prevName = $field['name'];
+			$m++;	
+		}
+	}
+	?>
+	<!-- add -->
+	<tr>
+		<td colspan="4">
+			<button class='btn btn-small' data-action='add'  data-fieldname='<?php print $field['name']; ?>' rel='tooltip' data-placement='right' title='Add new custom User field'><i class='icon-gray icon-plus'></i>
+		</td>
+	</tr>
+	<!-- result -->
+	<tr>
+		<td colspan="4">
+			<div class="customUserResult"></div>
 		</td>
 	</tr>
 	</tbody>
