@@ -18,6 +18,7 @@
 	+ Added option for plain-text emails;
 	+ Added ckEditor to write instructions;
 	+ StrictMode is not set globally anymore but set per section;
+	+ Added custom user fields;
 
 	Bugfixes:
 	------------------------
